# vvgo

./: BUILD.bazel  Dockerfile  WORKSPACE  __uploader.out  bazel-bin  bazel-out  bazel-testlogs  bazel-vvgo  go.mod  go.sum  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: test.yml
cache/: bazel.sha256
cmd/vvgo/: BUILD.bazel  main_test.go
pkg/api/: BUILD.bazel  api_test.go  auth.go  helpers.go  login.go  login_test.go  server.go  views.go
pkg/discord/: discord.go
pkg/log/: BUILD.bazel
pkg/login/: access_test.go  sessions.go  sessions_test.go
pkg/redis/: redis.go
pkg/sheets/: BUILD.bazel
pkg/storage/: BUILD.bazel  bucket.go
pkg/version/: BUILD.bazel
proto_idl/projects/: BUILD.bazel  projects.proto
proto_idl/uploads/: BUILD.bazel  uploads.proto
public/: parts.gohtml
python/tests/: conftest.py  fixtures.py  redis-no-persist.conf  test_fetch.py  test_redis.py
python/vvgo/: __main__.py  _exec_impure_hacks.py  config.py  core.py  discord.py  fetch.py  redis.py  util.py
tools/version/: BUILD.bazel
