load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "info.go",
        "main.go",
    ],
    importpath = "github.com/virtual-vgo/vvgo/cmd/vvgo",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/version:go_default_library",
    ],
)

go_binary(
    name = "vvgo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
