load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api_server.go",
        "auth.go",
        "download.go",
        "helpers.go",
        "sheets.go",
        "version.go",
    ],
    importpath = "github.com/virtual-vgo/vvgo/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/sheets:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_minio_minio_go_v6//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "api_server_test.go",
        "auth_test.go",
        "download_test.go",
        "helpers_test.go",
        "sheets_test.go",
        "version_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/sheets:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_minio_minio_go_v6//:go_default_library",
        "@org_golang_x_net//html:go_default_library",
    ],
)
