load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["object_storage.go"],
    importpath = "github.com/virtual-vgo/vvgo/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "@com_github_minio_minio_go_v6//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["object_storage_test.go"],
    embed = [":go_default_library"],
)
