load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "projects_proto",
    srcs = ["projects.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "projects_go_proto",
    importpath = "github.com/virtual-vgo/vvgo/gen/projects",
    proto = ":projects_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":projects_go_proto"],
    importpath = "github.com/virtual-vgo/vvgo/gen/projects",
    visibility = ["//visibility:public"],
)
